<resources>
    <string name="app_name">Lab1</string>
    <string name="pratik_panchani">Pratik Panchani</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="facebook">FACEBOOK</string>
    <string name="twitter">TWITTER</string>
    <string name="amazon">AMAZON</string>
    <string name="google">GOOGLE</string>
</resources>
