<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_block"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pratik_panchani"
            android:textColor="#00ffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/block1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:textStyle="bold">

            <EditText
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#ffff00"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:background="#0000ff"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/block2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:textStyle="bold">

            <EditText
                android:id="@+id/editText"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#ffff00"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:background="#ff00ff"
                android:gravity="center"
                android:text="@string/twitter"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/block3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:textStyle="bold">

            <Button
                android:id="@+id/btn_login3"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#00ff00"
                android:gravity="center"
                android:text="@string/amazon"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login4"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:background="#ff0000"
                android:gravity="center"
                android:text="@string/google"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>